--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.acc-header{
+  background-color: rgb(186, 194, 144);
+  color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.acc-container{
+  padding: 60px 200px 200px;
 }
+.home-container{
+  /* background-image: url('C:\Vedha_Learning\React_Projects\applianceminder\src\asset\house1.jpg'); /* Replace with the path to your image */
+/* background-size: cover;
+background-position: center;
+background-attachment: fixed;  */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cont{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
 }
+.overlay{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+padding: 10px 20px; /* Add padding for better readability */
 }
+  
